--- a/packages/elvis/src/components/tag.scss
+++ b/packages/elvis/src/components/tag.scss
@@ -8,40 +8,40 @@ $label-font-size: 11px;
 $label-colors: map-merge(colors.$just-colors, colors.$primary-colors);
 
 %status-content {
-  display: inline-flex;
   border-radius: 50%;
+  display: inline-flex;
   height: 8px;
-  width: 8px;
   left: 8px;
+  width: 8px;
 }
 
 @mixin circle($color) {
   padding: 4px 8px 4px 24px;
+
   &::before {
+    @extend %status-content;
+    background-color: colors.color($color);
     content: ' ';
     position: absolute;
-    background-color: colors.color($color);
-    @extend %status-content;
   }
 }
 
-// DEPRECATED (e-label)
+// DEPRECATED (e-label only)
 .e-label,
 .e-tag {
-  position: relative;
-  display: inline-flex;
   align-items: center;
-  padding: $label-padding;
-  border-radius: $label-radius;
   background: colors.color('grey-10');
-
+  border-radius: $label-radius;
+  color: colors.color('font-color');
+  display: inline-flex;
   font-family: 'Red Hat Text', Verdana, sans-serif;
   font-size: $label-font-size;
   font-weight: 400;
-  line-height: 16px;
   letter-spacing: 0.5px;
+  line-height: 16px;
+  padding: $label-padding;
+  position: relative;
   text-transform: uppercase;
-  color: colors.color('font-color');
   white-space: nowrap;
 
   @each $colorName, $map in $label-colors {
