Removed playground changes

--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -4,17 +4,9 @@
     <!--Test the component here (delete what was here previously). When done add it to the list alphabetically-->
     <h3>Test your component here</h3>
     <!--Normal version-->
-    <div class="e-bg-white">
-      <elvia-tabs [items]="['Epler', 'Appelsin', 'Bananer', 'Druer', 'Kiwi']" [value]="1"></elvia-tabs>
-    </div>
+    <div class="e-bg-white"></div>
     <!--Inverted version-->
-    <div class="e-bg-grey">
-      <elvia-tabs
-        isInverted="true"
-        [items]="['Epler', 'Appelsin', 'Bananer', 'Druer', 'Kiwi']"
-        [value]="1"
-      ></elvia-tabs>
-    </div>
+    <div class="e-bg-grey"></div>
   </div>
 
   <!--Accordion-->
@@ -465,7 +457,7 @@
   <!--Tabs-->
   <div class="example-wrapper">
     <h3>Tabs</h3>
-    <!-- <elvia-tabs [items]="['Epler', 'Appelsin', 'Bananer', 'Druer', 'Kiwi']" [value]="1"></elvia-tabs> -->
+    <elvia-tabs [items]="['Epler', 'Appelsin', 'Bananer', 'Druer', 'Kiwi']" [value]="1"></elvia-tabs>
   </div>
 
   <!--Timepicker-->
