fix(autcomplete): typo

--- a/packages/elvis/src/components/autcomplete.scss
+++ b/packages/elvis/src/components/autcomplete.scss
@@ -41,7 +41,7 @@ $autocomplete-padding-item-compact: 6px 10px;
   }
 }
 
-// form field adujustments for autocomplete
+// form field adjustments for autocomplete
 .e-form-field {
   &.e-form-field--compact {
     .e-autocomplete {
