refactor(fileupload): partly disable style lint for deprecated styles

--- a/packages/elvis/src/components/form/fileupload.scss
+++ b/packages/elvis/src/components/form/fileupload.scss
@@ -83,7 +83,9 @@
   }
 
   // DEPRECATED
+  /* stylelint-disable -- Do not lint deprecated styles */
   &---hover {
     border-color: colors.color('elvia-charge');
   }
+  /* stylelint-enable */
 }
