demo(datepicker-range): add min and max date

--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -240,7 +240,11 @@
   <div class="example-wrapper">
     <h3>Date range picker</h3>
     <elvia-datepicker-range></elvia-datepicker-range>
-    <elvia-datepicker-range hasTimepicker></elvia-datepicker-range>
+    <elvia-datepicker-range
+      hasTimepicker
+      [minDate]="minDateRange"
+      [maxDate]="maxDateRange"
+    ></elvia-datepicker-range>
   </div>
 
   <!--Divider-->
