--- a/packages/web/src/app/doc-pages/components/button-doc/button-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/button-doc/button-doc.component.html
@@ -294,4 +294,11 @@
       <app-component-properties [componentName]="'e-btn'"></app-component-properties>
     </ng-container>
   </app-component-section>
+
+  <!--Changelog-->
+  <app-component-section [sectionTitle]="'Changelog'">
+    <ng-container ngProjectAs="sectionContent">
+      <app-component-changelog [componentToFilter]="title" [changelog]="changelog"></app-component-changelog>
+    </ng-container>
+  </app-component-section>
 </div>
