fix(button-doc): add missing code-text to inline code

--- a/packages/web/src/app/doc-pages/components/button-doc/button-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/button-doc/button-doc.component.html
@@ -244,7 +244,9 @@
     <ng-container ngProjectAs="sectionContent">
       <app-component-subsection [sectionTitle]="'Links with button style'">
         <ng-container ngProjectAs="sectionContent">
-          The e-btn class can also be used on anchor tags to make links appear like buttons.
+          The
+          <span class="code-text">e-btn</span>
+          class can also be used on anchor tags to make links appear like buttons.
           <app-component-example-v1
             [codeHTML]="buttonLinks"
             [codeInverted]="buttonLinksInverted"
