feat(button): add initial lit button

--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -91,6 +91,12 @@
     <elvia-breadcrumb [items]="breadcrumbsTestNoUrl"></elvia-breadcrumb>
   </div>
 
+  <!--Button-->
+  <div class="example-wrapper">
+    <h3>Button</h3>
+    <elvia-button>Button</elvia-button>
+  </div>
+
   <!--Card-->
   <div class="example-wrapper">
     <h3>Card</h3>
