feat(web): add styles for code and kbd

--- a/packages/web/src/styles.scss
+++ b/packages/web/src/styles.scss
@@ -62,6 +62,7 @@ p {
   }
 }
 
+code,
 .code-text {
   font-family: 'Red Hat Mono', Verdana, sans-serif;
   font-style: normal;
@@ -74,6 +75,7 @@ p {
   padding: 0 2px;
 }
 
+kbd,
 .keyboard-button {
   padding: 6px 16px;
   margin-right: 8px;
