feat(/search-menu): add "looking for...?" links

--- a/packages/web/src/app/shell/header/search-menu/search-menu.component.html
+++ b/packages/web/src/app/shell/header/search-menu/search-menu.component.html
@@ -95,6 +95,17 @@
           </span>
         </button>
       </div>
+      <p class="e-mt-8 e-mb-32" *ngIf="showResults && synonymComponents.length > 0">
+        Looking for the
+        <ng-container *ngFor="let component of synonymComponents; let last = last; let first = first">
+          <span *ngIf="!last && !first">,</span>
+          <span *ngIf="last && !first">or</span>
+          <a class="e-link e-link--inline" [routerLink]="[component.absolutePath]">
+            {{ component.title }}
+          </a>
+        </ng-container>
+        component?
+      </p>
     </div>
 
     <div class="no-results" *ngIf="searchString.length !== 0 && this.activeResults.length === 0">
