refactor(search-menu): minor css refactor for component suggestions

--- a/packages/web/src/app/shell/header/search-menu/search-menu.component.scss
+++ b/packages/web/src/app/shell/header/search-menu/search-menu.component.scss
@@ -1,6 +1,7 @@
 @use '../header.component.scss';
 @use '@elvia/elvis/src/utilities/breakpoints.scss' as breakpoints;
 @use '@elvia/elvis/src/variables/typography.scss';
+@use '@elvia/elvis/src/variables/colors';
 
 .header {
   position: fixed;
@@ -82,7 +83,6 @@
   .inner-content {
     margin-bottom: 152px;
     width: 100%;
-    // overflow: auto;
   }
 
   .close-btn-desk {
@@ -105,6 +105,13 @@
       margin-top: 0px;
     }
 
+    .search-wrapper {
+      width: calc(100% - 32px);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      max-width: 365px;
+    }
     .search-title {
       margin: 0px;
       @include breakpoints.breakpoint-up(Mobile) {
@@ -125,15 +132,15 @@
       &.e-search--global {
         display: flex;
         flex-direction: row;
+        align-items: center;
         margin-top: 40px;
-        width: 365px;
+        width: 100%;
 
         @include breakpoints.breakpoint-up(Tablet) {
           margin-top: 32px;
         }
         @include breakpoints.breakpoint-up(Mobile) {
           margin-top: 24px;
-          width: auto;
         }
 
         .e-input {
@@ -162,9 +169,8 @@
             display: flex;
             position: absolute;
             right: 0;
-            bottom: 1px;
             @media screen and (-ms-high-contrast: none) {
-              top: 0px;
+              top: 0;
             }
             .e-btn__icon {
               width: 16px;
@@ -177,7 +183,7 @@
               i[class*='e-icon--close-bold'] {
                 position: absolute;
                 display: flex;
-                top: 0px;
+                top: 0;
               }
             }
           }
@@ -202,15 +208,16 @@
   }
 
   .no-results {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    display: grid;
+    place-items: center;
     margin-top: 64px;
     @include typography.typography('text-lg');
   }
 
   .results {
+    display: flex;
+    gap: 8px;
+    flex-direction: column;
     margin: 0 auto;
     margin-top: 64px;
     width: 700px;
@@ -232,16 +239,15 @@
 
     .result-item {
       display: flex;
+      gap: 8px;
       flex-direction: column;
       cursor: pointer;
+      padding: 16px;
 
-      &:not(:last-of-type) {
-        padding-bottom: 32px;
-        border-bottom: 1px solid var(--e-grey-10);
+      &:hover {
+        background-color: colors.color('grey-05');
       }
-      &:not(:first-of-type) {
-        padding-top: 32px;
-      }
+
       .result-title {
         display: flex;
         flex-direction: row;
@@ -251,6 +257,7 @@
         }
         .e-tag {
           cursor: pointer;
+          max-height: 24px;
         }
       }
 
