--- a/packages/web/src/styles.scss
+++ b/packages/web/src/styles.scss
@@ -62,7 +62,7 @@ p {
   }
 }
 
-code:not(.active-code),
+code,
 .code-text {
   font-family: 'Red Hat Mono', Verdana, sans-serif;
   font-style: normal;
