fix(component-example-code): fix code styles

--- a/packages/web/src/app/shared/component-documentation/component-example/component-example-code/component-example-code.component.scss
+++ b/packages/web/src/app/shared/component-documentation/component-example/component-example-code/component-example-code.component.scss
@@ -55,6 +55,10 @@ pre {
   .active-code {
     font-family: 'Red Hat Mono', Verdana, sans-serif;
     color: white;
+    background: unset;
+    font-size: inherit;
+    border-radius: unset;
+    padding: inherit;
   }
   .script-tag {
     height: 18px;
