chore(datepicker-range): rename prop to hasTimepickers

--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -241,7 +241,7 @@
     <h3>Date range picker</h3>
     <elvia-datepicker-range></elvia-datepicker-range>
     <elvia-datepicker-range
-      hasTimepicker
+      hasTimepickers
       [minDate]="minDateRange"
       [maxDate]="maxDateRange"
     ></elvia-datepicker-range>
