--- a/packages/web/src/app/shared/component-documentation/component-installation/component-installation.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-installation/component-installation.component.html
@@ -17,9 +17,9 @@
   <li>
     <strong>Install package:</strong>
     <div class="code-text e-mt-16">
-      <app-copy message="npm install @elvia/{{ componentData.name }}">
+      <app-copy message="npm install @elvia/{{ packageName }}">
         <ng-container ngProjectAs="copyContent">
-          <span class="code-text" style="line-height: 26px">npm install @elvia/{{ componentData.name }}</span>
+          <span class="code-text" style="line-height: 26px">npm install @elvia/{{ packageName }}</span>
         </ng-container>
       </app-copy>
     </div>
@@ -28,25 +28,19 @@
     <strong>Import package:</strong>
     <h4 class="e-title-caps e-mt-24 e-mb-8">Web component</h4>
     <div class="code-text">
-      <app-copy message="Import '@elvia/{{ componentData.name }}';">
+      <app-copy message="Import '@elvia/{{ packageName }}';">
         <ng-container ngProjectAs="copyContent">
-          <span class="code-text" style="line-height: 26px">Import '@elvia/{{ componentData.name }}';</span>
+          <span class="code-text" style="line-height: 26px">Import '@elvia/{{ packageName }}';</span>
         </ng-container>
       </app-copy>
     </div>
     <div class="e-text-md">(Angular - Should be imported in module.ts not component.ts)</div>
     <h4 class="e-title-caps e-mt-16 e-mb-8">React</h4>
     <div class="code-text">
-      <app-copy
-        message="import &#123; {{ componentData.elementNameR }} &#125; from '@elvia/{{
-          componentData.name
-        }}/react';"
-      >
+      <app-copy message="import &#123; {{ reactElementName }} &#125; from '@elvia/{{ packageName }}/react';">
         <ng-container ngProjectAs="copyContent">
           <span class="code-text" style="line-height: 26px">
-            import &#123; {{ componentData.elementNameR }} &#125; from '@elvia/{{
-              componentData.name
-            }}/react';
+            import &#123; {{ reactElementName }} &#125; from '@elvia/{{ packageName }}/react';
           </span>
         </ng-container>
       </app-copy>
@@ -58,15 +52,11 @@
       <h4 class="e-title-caps e-mt-16 e-mb-8">Types</h4>
       <div class="code-text">
         <app-copy
-          message="import &#123; {{ componentData.elementNameR }}Props &#125; from '@elvia/{{
-            componentData.name
-          }}/react';"
+          message="import &#123; {{ reactElementName }}Props &#125; from '@elvia/{{ packageName }}/react';"
         >
           <ng-container ngProjectAs="copyContent">
             <span class="code-text" style="line-height: 26px">
-              import &#123; {{ componentData.elementNameR }}Props &#125; from '@elvia/{{
-                componentData.name
-              }}/react';
+              import &#123; {{ reactElementName }}Props &#125; from '@elvia/{{ packageName }}/react';
             </span>
           </ng-container>
         </app-copy>
