--- a/packages/web/src/app/doc-pages/components/tabs-doc/tabs-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/tabs-doc/tabs-doc.component.html
@@ -71,9 +71,15 @@
             <li>
               <strong>Aria labelledby:</strong>
               Add
-              <span class="code-text">aria-labelledby="ewc-tab-id-0"</span>
+              <span class="code-text">aria-labelledby='ewc-tabs-0'</span>
               to the corresponding contents, with the id of that tab. The id of the tab is named like this:
-              <span class="code-text">'ewc-tab-id-' + index</span>
+              <span class="code-text">'ewc-tabs-' + index</span>
+              . NB! If you have multiple set of tabs you should use the
+              <code>tabIdPrefix</code>
+              and the id will then be
+              <code>'ewc-tabs-prefix-index'</code>
+              e.g:
+              <code>'ewc-tabs-fruits-3'</code>
               .
             </li>
           </ul>
