tests(tabs): updated tabs tests

--- a/packages/web/src/app/doc-pages/components/tabs-doc/tabs-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/tabs-doc/tabs-doc.component.html
@@ -82,6 +82,14 @@
               <code>'ewc-tabs-fruits-3'</code>
               .
             </li>
+            <li>
+              <strong>Aria controls:</strong>
+              The aria panels should also have unique id, which should correspond to the tabs aria-controls.
+              The aria-controls are named in the same way that the ids for the tabs are named, so it should be
+              easy to add the ids to panels e.g.
+              <code>id='ewc-tabs-fruits-3'</code>
+              .
+            </li>
           </ul>
         </ng-container>
       </app-component-subsection>
