--- a/packages/web/src/app/doc-pages/components/button-doc/button-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/button-doc/button-doc.component.html
@@ -245,7 +245,7 @@
       <app-component-subsection [sectionTitle]="'Links with button style'">
         <ng-container ngProjectAs="sectionContent">
           The
-          <span class="code-text">e-btn</span>
+          <code>e-btn</code>
           class can also be used on anchor tags to make links appear like buttons.
           <app-component-example-v1
             [codeHTML]="buttonLinks"
@@ -266,14 +266,14 @@
             <li>
               <strong>Aria label:</strong>
               Remember to always add a descriptive
-              <span class="code-text">aria-label</span>
+              <code>aria-label</code>
               to all icon-button.
             </li>
             <li>
               <strong>Aria hidden:</strong>
               Most icons are purely decorative and should therefore be excluded from the accessibility tree by
               adding
-              <span class="code-text">aria-hidden="true"</span>
+              <code>aria-hidden="true"</code>
               to the icon element.
             </li>
           </ul>
