--- a/packages/web/src/app/shared/component-documentation/component-changelog/component-changelog.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-changelog/component-changelog.component.html
@@ -3,7 +3,7 @@
     This changelog only contains Elvis versions that affected the
     {{ componentToFilter | lowercase }} component and may thus appear incomplete. See the complete Elvis
     changelog on the
-    <a class="e-link e-link--inline" href="https://design.elvia.io/about/whats-new">What's new?</a>
+    <a class="e-link e-link--inline" [routerLink]="'/about/whats-new'">What's new?</a>
     page.
   </p>
   <table>
