--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -231,13 +231,17 @@
   <!--Datepicker-->
   <div class="example-wrapper">
     <h3>DatePicker</h3>
-    <elvia-datepicker [value]="date" (valueOnChange)="writeDate($event.detail.value)"></elvia-datepicker>
+    <elvia-datepicker
+      [value]="date"
+      (valueOnChange)="writeDate($event.detail.value)"
+      hasErrorPlaceholder="false"
+    ></elvia-datepicker>
   </div>
 
   <!--Date range picker-->
   <div class="example-wrapper">
     <h3>Date range picker</h3>
-    <elvia-datepicker-range></elvia-datepicker-range>
+    <elvia-datepicker-range hasErrorPlaceholder="true"></elvia-datepicker-range>
   </div>
 
   <!--Divider-->
@@ -465,6 +469,8 @@
     <h3>Timepicker</h3>
     <div style="display: flex; gap: 32px; flex-wrap: wrap; align-items: baseline">
       <elvia-timepicker></elvia-timepicker>
+
+      <elvia-timepicker hasErrorPlaceholder="false"></elvia-timepicker>
 
       <elvia-timepicker label="Custom label"></elvia-timepicker>
 
