--- a/packages/web/src/app/dev/v2-playground/v2-playground.component.html
+++ b/packages/web/src/app/dev/v2-playground/v2-playground.component.html
@@ -4,7 +4,19 @@
     <!--Test the component here (delete what was here previously). When done add it to the list alphabetically-->
     <h3>Test your component here</h3>
     <!--Normal version-->
-    <div class="e-bg-white"></div>
+    <div class="e-bg-white">
+      <elvia-datepicker [value]="date" (valueOnChange)="writeDate($event.detail.value)"></elvia-datepicker>
+      <elvia-datepicker
+        [value]="date"
+        (valueOnChange)="writeDate($event.detail.value)"
+        hasErrorPlaceholder="true"
+      ></elvia-datepicker>
+      <elvia-datepicker
+        [value]="date"
+        (valueOnChange)="writeDate($event.detail.value)"
+        [hasErrorPlaceholder]="false"
+      ></elvia-datepicker>
+    </div>
     <!--Inverted version-->
     <div class="e-bg-grey"></div>
   </div>
