--- a/packages/web/src/app/doc-pages/components/tabs-doc/tabs-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/tabs-doc/tabs-doc.component.html
@@ -71,9 +71,23 @@
             <li>
               <strong>Aria labelledby:</strong>
               Add
-              <span class="code-text">aria-labelledby="ewc-tab-id-0"</span>
+              <span class="code-text">aria-labelledby='ewc-tabs-0'</span>
               to the corresponding contents, with the id of that tab. The id of the tab is named like this:
-              <span class="code-text">'ewc-tab-id-' + index</span>
+              <span class="code-text">'ewc-tabs-' + index</span>
+              . NB! If you have multiple set of tabs you should use the
+              <code>tabIdPrefix</code>
+              and the id will then be
+              <code>'ewc-tabs-prefix-index'</code>
+              e.g:
+              <code>'ewc-tabs-fruits-3'</code>
+              .
+            </li>
+            <li>
+              <strong>Aria controls:</strong>
+              The aria panels should also have unique id, which should correspond to the tabs aria-controls.
+              The aria-controls are named in the same way that the ids for the tabs are named, so it should be
+              easy to add the ids to panels e.g.
+              <code>id='ewc-tabs-fruits-3'</code>
               .
             </li>
           </ul>
