refactor(component-changelog): rename componentToFilter to elvisComponentToFilter

--- a/packages/web/src/app/shared/component-documentation/component-changelog/component-changelog.component.html
+++ b/packages/web/src/app/shared/component-documentation/component-changelog/component-changelog.component.html
@@ -1,7 +1,7 @@
 <ng-template #changelogTemplate>
-  <p *ngIf="componentToFilter" class="e-m-0">
+  <p *ngIf="elvisComponentToFilter" class="e-m-0">
     This changelog only contains Elvis versions that affected the
-    {{ componentToFilter | lowercase }} component and may thus appear incomplete. See the complete Elvis
+    {{ elvisComponentToFilter | lowercase }} component and may thus appear incomplete. See the complete Elvis
     changelog on the
     <a class="e-link e-link--inline" [routerLink]="'/about/whats-new'">What's new?</a>
     page.
