Revert "refactor(button-doc): change elvisComponentToFilter from title to "button""
This reverts commit 280d92837ee1e03295e0bd92234009ed9727214d.

--- a/packages/web/src/app/doc-pages/components/button-doc/button-doc.component.html
+++ b/packages/web/src/app/doc-pages/components/button-doc/button-doc.component.html
@@ -300,7 +300,7 @@
   <!--Changelog-->
   <app-component-section [sectionTitle]="'Changelog'">
     <ng-container ngProjectAs="sectionContent">
-      <app-component-changelog [elvisComponentToFilter]="'button'"></app-component-changelog>
+      <app-component-changelog [elvisComponentToFilter]="title"></app-component-changelog>
     </ng-container>
   </app-component-section>
 </div>
